# mod_xconf

./: README.md
sources/: Makefile  Makefile.am  Makefile.in  cipher.c  cipher.h  commands.c  commands.h  dsp.h  mod_xconf.c  mod_xconf.h  playback.c  playback.h  utils.c  utils.h
sources/conf/autoload_configs/: xconf.conf.xml
sources/conf/dialplan/: xconf_dialplan.xml
